[metadata]
name = cranix
version = 1.0.0
author = Peter Varkoly
description = Python API for the CRANIX/CEPHALIX Server
readme = README.md
license = MIT
license_files = LICENSE
urls = https://github.com:Cranix-Solutions/cranix-python
homepage = https://github.com:Cranix-Solutions/cranix-python

[options]
packages = find:
python_requires = >=3.11
install_requires =

